# zugubul_remote

./: .gitignore  README.md  pyproject.toml  zugubul_remote.py
src/zugubul_remote/: app.py
