[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"



[project]
name = "zugubul_remote"
authors = [
    {name = "Mark Simmons", email = "mjsimmons@ucsd.edu"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["gooey", "fabric", "importlib-resources"]
version = "0.2.3"

[project.scripts]
zugubul_remote = "zugubul_remote.app:main"

[tool.setuptools]
packages = ["zugubul_remote", "elan", "icons"]
package-dir = {"" = "src"}